--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,19 +29,7 @@
         </activity>
 
         <service
-            android:name="com.hjianfei.service.GTrackerService"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:priority="1000">
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config" />
-        </service>
-        <service
-            android:name="com.hjianfei.service.ITrackerService"
+            android:name="com.hjianfei.service.TrackerService"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
